MD Settings: add missing Mac-only "tab to links" pref

R=dpapad@chromium.org
BUG=711680
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2888303006
Cr-Commit-Position: refs/heads/master@{#473039}

Former-commit-id: 149ab23ede856cb3ee772babb840340cb5a82cf5